# ida_kernelcache_ng

./: .gitignore  CONTRIBUTING.md  README.md  cli.py  ida_kernelcache.py  ida_kernelcache_reload.py  ida_plugin_stub.py  install.sh  pyproject.toml  tasks.todo
ida_kernelcache/: __init__.py  build_struct.py  class_info.py  consts.py  data_flow.py  emulate.py  exceptions.py  ida-plugin.json  ida_plugin.py  ida_utilities.py  internal.py  kernelcache.py  kplist.py  rtti.py  rtti_info.py  stub.py  symbol.py  symbols.py  utils.py
ida_kernelcache/ida_helpers/: __init__.py  abstractions.py  decompiler.py  functions.py  generators.py  hooks.py  instructions.py  names.py  strings.py  types.py
ida_kernelcache/phases/: __init__.py  add_metaclass_symbols.py  add_vtable_method_symbols.py  add_vtable_symbols.py  apply_rtti_info.py  base_phase.py  collect_classes.py  collect_vtables.py  colorize_vtables.py  create_types.py  ipsw_symbolicate.py  pac_symbolicate.py  rename_segments.py  set_class_info_symbols.py  tagged_pointers.py
scripts/: find_virtual_method_overrides.py  generate_symdb.py  pac.py
tests/: test_all.py  test_collect_classes.py  test_colorize.py  test_create_types.py  test_kexts.py  test_pac_symbolication.py  test_persistent_db.py  test_symbolication.py  test_utils.py  test_vtable_collection.py
